--- a/add.html
+++ b/add.html
@@ -1,25 +1,30 @@
 <html>
 <head>
 	<title>Add Data</title>
+	<link rel="stylesheet" href="assets/app.css">
 </head>
 
-<body>
+<body class="design">
 	<a href="index.php">Home</a>
 	<br/><br/>
 
 	<form action="add.php" method="get" name="form1">
 		<table width="25%" border="0">
 			<tr> 
+				<td>ID</td>
+				<td><input type="number" name="id"></td>
+			</tr>
+			<tr> 
 				<td>Name</td>
 				<td><input type="text" name="name"></td>
 			</tr>
 			<tr> 
-				<td>Age</td>
-				<td><input type="text" name="age"></td>
+				<td>Phone</td>
+				<td><input type="number" name="phone"></td>
 			</tr>
 			<tr> 
-				<td>Email</td>
-				<td><input type="text" name="email"></td>
+				<td>Designation</td>
+				<td><input type="text" name="designation"></td>
 			</tr>
 			<tr> 
 				<td></td>
